test/functions/bradc/setterFns/setterReturns2.good
setterReturns2.chpl:5: error: setter functions cannot return values
